Basic Setting Finish

--- a/DM Probability Simulator/bin/.gitignore
+++ b/DM Probability Simulator/bin/.gitignore
@@ -4,3 +4,7 @@
 /dungeonLayout.class
 /xMarkGray.png
 /xMarkRed.png
+/dungeonLayout$4.class
+/simulation.class
+/Simulation.class
+/dungeonLayout$5.class
